# coursework_3

./: pyproject.toml
src/: JSONSaver.py  vacancy.py  work_api.py
